Fix some exception related issues

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+.vs/JqueryQueryBuilder/config/applicationhost.config
+.vs/JqueryQueryBuilder/config/debuggerConfiguration-893be3ef-ed06-4729-9e3a-ff29133447df.json
+.vs/JqueryQueryBuilder/v16/.suo
+QBuilder/QBuilder.csproj.user
